--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
     <title>About Us | Panshaker Services — Innovation Meets Automation</title>
     <meta name="description"
@@ -14,6 +14,13 @@
     <link rel="icon" href="favicon.ico" sizes="any">
     <!-- SEO: Canonical -->
     <link rel="canonical" href="https://www.panshaker.com/about.html">
+    <!-- SEO: hreflang -->
+    <link rel="alternate" hreflang="zh-CN" href="https://www.panshaker.com/about.html?lang=zh-CN">
+    <link rel="alternate" hreflang="en" href="https://www.panshaker.com/about.html?lang=en">
+    <link rel="alternate" hreflang="zh-TW" href="https://www.panshaker.com/about.html?lang=zh-TW">
+    <link rel="alternate" hreflang="ko" href="https://www.panshaker.com/about.html?lang=ko">
+    <link rel="alternate" hreflang="ja" href="https://www.panshaker.com/about.html?lang=ja">
+    <link rel="alternate" hreflang="x-default" href="https://www.panshaker.com/about.html">
     <!-- SEO: Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="About Us | Panshaker Services — Innovation Meets Automation">
@@ -22,6 +29,12 @@
     <meta property="og:url" content="https://www.panshaker.com/about.html">
     <meta property="og:site_name" content="Panshaker Services">
     <meta property="og:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="About Us | Panshaker Services">
+    <meta name="twitter:description" content="Learn about Panshaker Services — a leader in North American food automation.">
+    <meta name="twitter:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         /* 全局样式 - 补充页面自定义 */
@@ -41,7 +54,7 @@
             padding-top: 200px;
             padding-bottom: 100px;
             /* background: #f8f8f8; replaced by image */
-            background: url('assets/images/09-JackRacino.jpeg') no-repeat center center;
+            background: url('assets/images/09-JackRacino.webp') no-repeat center center;
             background-size: cover;
             text-align: center;
             position: relative;
@@ -316,7 +329,7 @@
     </section>
 
     <section class="section"
-        style="background: url('assets/images/managementteam.jpg') no-repeat center center; background-size: cover; padding-top: 60px;">
+        style="background: url('assets/images/managementteam.webp') no-repeat center center; background-size: cover; padding-top: 60px;">
         <div class="container">
             <h2 class="section-title" style="color: #fff; border-color: #fff;" data-i18n="about.team.title">管理团队</h2>
             <div class="team-grid">
