--- a/careers.html
+++ b/careers.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Careers | Panshaker Services — Join Our Team</title>
     <meta name="description"
         content="Explore career opportunities at Panshaker Services. Join our team building the future of automated food service technology in North America.">
@@ -13,6 +13,13 @@
     <link rel="icon" href="favicon.ico" sizes="any">
     <!-- SEO: Canonical -->
     <link rel="canonical" href="https://www.panshaker.com/careers.html">
+    <!-- SEO: hreflang -->
+    <link rel="alternate" hreflang="zh-CN" href="https://www.panshaker.com/careers.html?lang=zh-CN">
+    <link rel="alternate" hreflang="en" href="https://www.panshaker.com/careers.html?lang=en">
+    <link rel="alternate" hreflang="zh-TW" href="https://www.panshaker.com/careers.html?lang=zh-TW">
+    <link rel="alternate" hreflang="ko" href="https://www.panshaker.com/careers.html?lang=ko">
+    <link rel="alternate" hreflang="ja" href="https://www.panshaker.com/careers.html?lang=ja">
+    <link rel="alternate" hreflang="x-default" href="https://www.panshaker.com/careers.html">
     <!-- SEO: Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Careers | Panshaker Services — Join Our Team">
@@ -21,6 +28,12 @@
     <meta property="og:url" content="https://www.panshaker.com/careers.html">
     <meta property="og:site_name" content="Panshaker Services">
     <meta property="og:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Careers | Panshaker Services">
+    <meta name="twitter:description" content="Explore career opportunities at Panshaker Services.">
+    <meta name="twitter:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         body {
