--- a/profile_xu.html
+++ b/profile_xu.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
     <title>徐浩然 | 管理团队 | Panshaker Services</title>
     <meta name="description"
@@ -14,6 +14,13 @@
     <link rel="icon" href="favicon.ico" sizes="any">
     <!-- SEO: Canonical -->
     <link rel="canonical" href="https://www.panshaker.com/profile_xu.html">
+    <!-- SEO: hreflang -->
+    <link rel="alternate" hreflang="zh-CN" href="https://www.panshaker.com/profile_xu.html?lang=zh-CN">
+    <link rel="alternate" hreflang="en" href="https://www.panshaker.com/profile_xu.html?lang=en">
+    <link rel="alternate" hreflang="zh-TW" href="https://www.panshaker.com/profile_xu.html?lang=zh-TW">
+    <link rel="alternate" hreflang="ko" href="https://www.panshaker.com/profile_xu.html?lang=ko">
+    <link rel="alternate" hreflang="ja" href="https://www.panshaker.com/profile_xu.html?lang=ja">
+    <link rel="alternate" hreflang="x-default" href="https://www.panshaker.com/profile_xu.html">
     <!-- SEO: Open Graph -->
     <meta property="og:type" content="profile">
     <meta property="og:title" content="Xu Haoran — Founder | Panshaker Services">
