--- a/x7_ai.html
+++ b/x7_ai.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
     <title>X7-AI Robot | Panshaker Services</title>
     <meta name="description"
@@ -14,6 +14,13 @@
     <link rel="icon" href="favicon.ico" sizes="any">
     <!-- SEO: Canonical -->
     <link rel="canonical" href="https://www.panshaker.com/x7_ai.html">
+    <!-- SEO: hreflang -->
+    <link rel="alternate" hreflang="zh-CN" href="https://www.panshaker.com/x7_ai.html?lang=zh-CN">
+    <link rel="alternate" hreflang="en" href="https://www.panshaker.com/x7_ai.html?lang=en">
+    <link rel="alternate" hreflang="zh-TW" href="https://www.panshaker.com/x7_ai.html?lang=zh-TW">
+    <link rel="alternate" hreflang="ko" href="https://www.panshaker.com/x7_ai.html?lang=ko">
+    <link rel="alternate" hreflang="ja" href="https://www.panshaker.com/x7_ai.html?lang=ja">
+    <link rel="alternate" hreflang="x-default" href="https://www.panshaker.com/x7_ai.html">
     <!-- SEO: Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="X7-AI Robot | Panshaker Services — Intelligent Cooking Automation">
@@ -22,6 +29,15 @@
     <meta property="og:url" content="https://www.panshaker.com/x7_ai.html">
     <meta property="og:site_name" content="Panshaker Services">
     <meta property="og:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="X7-AI Robot | Panshaker Services">
+    <meta name="twitter:description" content="Explore the X7-AI Robot — intelligent cooking automation powered by AI.">
+    <meta name="twitter:image" content="https://www.panshaker.com/assets/logo/panshaker-logo.png">
+    <!-- Resource hints -->
+    <link rel="dns-prefetch" href="//www.xinchushi.com">
+    <link rel="preconnect" href="https://www.xinchushi.com">
     <link rel="stylesheet" href="assets/styles/shared.css?v=3">
     <style>
         body {
@@ -79,7 +95,8 @@
     </header>
 
     <div class="iframe-wrapper">
-        <iframe src="https://www.xinchushi.com/product" title="X7-AI Robot Product" allowfullscreen loading="lazy">
+        <iframe src="https://www.xinchushi.com/product" title="X7-AI Robot Product" allowfullscreen loading="lazy"
+            sandbox="allow-same-origin allow-scripts allow-popups allow-forms">
         </iframe>
     </div>
 
